6.00/I.MingVar_history.md
## 2018/12/27

I.字坊製作部公開發佈「I.明體」字型檔：I.Ming-6.00.ttf，版本資訊爲Version 6.00。

## 2018/12/24

內部釋出測試版本字型檔：I.Ming5.90.ttf，版本資訊爲Version 5.90。

## 2018/12/20

修改或重修以下字元：
𤮺㇋㇡

新增以下字元：
乁

## 2018/12/16

李爾樅內部釋出測試版本字型檔：I.MingVar5.24.ttf，版本資訊爲Version 5.24。

## 2018/12/09-16

發現豎排、語系等有重大問題，李爾樅及其朋友全力修復，伍梓豪、陳志泓、陳柏逸、鍾啟堯、陳輝恒、內木一郎、Extc等協助測試和給予意見。最終重建豎排和語系設定，同時收復「IPAmj明體」裏「Em Dash」設定爲非全形內縮字元的問題。過程中內部釋出了數個測試版本。

## 2018/12/08

修改或新增以下字元：
：；〚〛…︙⁇⁈⁉‼☚☛☜☝☞☟←↑→↓⇦⇧⇨⇩↖↗↘↙⇄⇅⇆⇇⇈⇉⇊⇵⁰¹²³⁴⁵⁶⁷⁸⁹₀₁₂₃₄₅₆₇₈₉½↉⅓⅔¼¾⅕⅖⅗⅘⅙⅚⅐⅛⅜⅝⅞⅑⅒⅟─━│┃┌┏┐┓└┗┘┛├┝┠┣┤┥┨┫┬┯┰┳┴┷┸┻┼┿╂╋┍┎┑┒┕┖┙┚┞┟┡┢┦┧┩┪┭┮┱┲┵┶┹┺┽┾╀╁╃╄╅╆╇╈╉╊═║╒╓╔╕╖╗╘╙╚╛╜╝╞╟╠╡╢╣╤╥╦╧╨╩╪╫╬╭╮╯╰╱╲╳

內木一郎內部釋出測試版本字型檔：I.MingVar5.20.ttf，版本資訊爲Version 5.20。

## 2018/12/03

修正以下字元的編碼：
𮟝𮟀

## 2018/12/02

修改、重修或新增以下字元：
䧬𢕱𥒼𨖸𨞣印茚鮣𡊶𢂗𢬃𣦫𨒦𩬵承𢬬頲𨩪𣎗烿𣪂𪚘旃栴㮵𣪂𩔣𪚘𡵂𡵉𢼸𪢧戎娀毧狨絨绒羢茙蠈賊贼駥鱡㣝㭜䄾䘬䯷𠈋𠲦𡊸𢫨𣉝𣛸𣴛𣿐𤇽𥅯𥑳𥬪𦕧𦽒𧊕𧒿𧜆𧻪𨀻𨆎𨠤𨱿𩶺𪀚𪀵𫂽

## 2018/12/02

修改、重修或新增以下字元：
曾增佴偮傇咠咡嗫媶弭挕揖摂摄栮楫榵洱渳湒滠珥眲穁箿緝縙缉茸葞葺衈誀諿讘躡輯辑鉺鍓铒顳餌饵駬髶㛅㣬㥝㸎䁒䇯䉗䋙䌰䎹䏪䐕䐛䔱䝕䠜䣵䤊䩰䩸䯀𠶻𠻎𠻕𠻠𡂩𡃃𡄔𡍲𡎎𡓳𡠸𡤙𡦍𡱡𢕃𢜱𢝉𢡐𢱕𣀳𣌍𣠞𣧹𣩚𤛄𥍉𥎂𥕁𥠋𥷨𥹢𥻯𥽳𦔯𦔰𦕉𦕓𦕕𦕴𦖜𦖝𦖥𦖨𦖽𦗕𦗙𦗤𦗥𦗦𦗶𦗷𦗼𦗾𦗿𦘃𦘉𦶪𧊗𧎣𧙫𧤏𧪇𨉴𨊞𨍷𨨹𨺿𨻕𩊐𩮙𩯻𩲽𪓯𪔪𫃇𫉠𫉻𬄻𬝞𬸽斊𦔋𦕺𦗊𪕔𬵺洡籍耒耓耔耕耖耗耘耙耚耛耜耝耞耟耠耡耢耣耤耥耦耧耨耩耪耫耬耭耮耯耰耱藉藕誄诔躤銇頛㑍㼍䋘䎢䎣䎤䎦䎧䎨䎩䎪䎫䎮䎯䎰䎱䒹䣂䣢𠛨𠱤𢼡𥅦𥑶𥨱𥷸𦓨𦓪𦓬𦓮𦓯𦓰𦓱𦓳𦓴𦓵𦓷𦓹𦓺𦓻𦓼𦓽𦓾𦔁𦔂𦔃𦔄𦔅𦔆𦔈𦔉𦔋𦔌𦔍𦔎𦔏𦔐𦔓𦔔𦔗𦔘𦔛𦔜𦔝𦔞𦔟𦔠𦔡𦔢𦔥𦔦𦔨𦔩𦔪𦔫𦔬𦔭𦫎𦶮𧀗𨀤𨆮𨛙𩓕𩳆𫅿𭛧𮅰𮋦𮨍
甹俜娉梬涄聘騁骋䀻䛣䳙𠏬𠷓𠸮𢓳𢖊𥪁𥭢𦀔𦶊𩩍

## 2018/12/01

修改、重修或新增以下字元：
𥋣𠨲𣘫𠃓𪉷𡅿𡤲𣡣𤅦𤓠𥍗𥜸𥸖𥾁𧅸𧖋𨟬𨤌𨰳𩧤𩽶𭂅𥩭𥩮𨮺𩝚𨖀𤠷𨷺𥤚𥤛㔿㢟𡵂𡵉𢼸𣚯𣫎濲𢡱𩌥𢢢𣪸𣫉𣫪𥵠𦾫𣝝𣫀𦎼𧐜𧞒𧞹𧞺𩏻𪇂𪇗𪍥𪖃𠢔𠥝𡩾𢄠𢋔𢕓𢿛𣉾𤁮𤛐𤠾𤹪𥱸𧏺𧞨𨄅𩀫𩔸𩪍𪛃𧦅𨸟𫞪𠥄𡄵𡤖𣫥𣫫𤻢𥏏𧏽𧜤𧢂𧫦𧮒𩥯𩮵𫩠𨓵郑𨜟𨞀坣𥊲𥋤𥢷𥤗𥳦𥳶𥸈𥼽𥽻𦗴𦡁𦺡𦼲𧅗𧒾𧨲𧭢𨅨𨆉𨎋𨎖𨎴𨝦𨞱𨟐𨡔𨣛𩀯𩘽𩙆𩞦𩟈𩼉𩼝𩽳𪄹𪇁𫄗𫉒𫙲𫠝𫷑𬩖𣙟𣰎𡖹𡗑𡠠𡭿𡽊𢴤𢿦𢿧𣀏𣃉𣎲𣥺𣪼𣰎𣾦𤔶𤗾𤛋𤢎𥊰䶄𠁈𠓧𡛚𢧶𣿋𤇠𤗭𤝘𤵡𤹣𥕕𥬏𥲉𧗌𧦝𨝘𨻲𩄗𩶈𪏹𪕉𠥫𡯜𡯠𢽦𥄴𥐄缢谥𡺬𣣼𤸸𥂺𥃠𦶩𧆇𧔈𨜶𨶂𨽪𪕶𬦜𬧬𥏟𠣸𠤀𠤇𠧫𠧺𠨢𠳰𠹐𠹘𠿆𡕞𡕟𡕠𡕡𡕢𡕣𡕧𡕨𡕪𡕫𡕬𡕭𡕯𡕲𡕴𡕶𡕹𡕺𡕻𡕼𡕽𡕾𡕿𡖀𡖁𡖃𡰿𡱥𡲲𡳉𡶣𡺷𡽀𢈡𢋌𢋣𢌂𢌉𢏤𢔃𢕛𢖒𢖻𢙴𢜤𢟜𢥀𢧇𣖱𣘅𣲋𤧯𤫘𤲋𤹉𥋂𥍬𥜚𥜱𥜷𪗓𥜹𥣯𥧜𥨏𥻴𥽟𦂊緮𦜄𦞶𦥍𦫝𦯩𦱛𦱟𦲯𦴅𦴲𦷜𦹿𧀥𧃰𧚉𧾤𨇄𨌘𨎙𨒥𨕟𨛐𨢽𨣪𨫙𨻅𨿓𩂫𩃃𩅆𩈥𩊻𩍫𩍳𩎋𩡘𪄂𪊴𪕞𪗒𪘑䝜𠣟𦶬𦾹𩆑𩓀𨬜𤻅𥴨𧓁𨙤𪇈𪌛𭼵𮠸𮬆𭐫𧛓𥔮𠢅𠢍𦂇𦞬𧩅𧪤𮘭屮練𠄈𠟇𠥢𠬂𡣆𡩣𡰚𡳞𡶷𡽤𡿑𡿠𢋑𢠴𢣶𢫰𢿻𣁣𣃌𣔕𣽘𤏞𤐪𤗷𤡩𤢯𤪏𤯷𤰀𤳩𥌌𥠹𥬫𥳞𥶒𥷖𥻋𥻘𥼭𦆞𦌬𦌳𦒪𦨁𦨃𦨄𦨅𦨆𦵴𦺸𧁽𧂌𧃮𧅊𧎩𧤠𧰢𧲂𨃥𨆴𨌤𨏏𨞁𨞧𨽃𩕔𩕶𩕼𩞻𩦆𩴠𩼩𪋲𪋷𪍴𫙮𬠴𢈣𦯎𢰕𤴙𢱰𦀙𧋙𨦱𥎋𥡥𦃍𦠷𧜢𩣢䡯𢤄𤁬𨢨𣞷𧁗䉥𦇎𨣼𥀮䇱𨞉𩬼𣶓𣖴𧨼𢰕𤴙𢱰𦃍𦠷𭫢𠦘𡊼𣽆𤤶𥯹𥰺𥳎𦩺𦵶𦶐𧏤𩢽𩬰𪀛𡑤𡢔𡰟𤰑𡳴𢺆𢺑𣜄𣟅𣠾𤼘𥢵𦆁𦣖𧄿𧅋𧆃𧕳𧝹𨏩𨭞𨰠𩼊𠙜𣎆𤬨𥃵𨙮䏎𠕵𠘻𠫨𢼐𣑃𧆉𧕺𨈔𨥵𩖛𩛳𩶞𪞖鿄𫞿㻚𥂀㞍𡴿𡵎𢓃𤴯𠌢𪐟𡕞𬯸𫕣𬵄𠅩𤴢𠪑𩪿㝪𢳊𣯭𤮅𥡩䉅𦄌𨄧𣞕𩅀𩻉𩉝𠮫𧮭㼿𠿜𡁓𡊝𡍻𡧗𡹳𡿕𢣓𢭨𣐎𣝚𣞑𤁦𤐱𤫣𤬦𤬧𤬩𤬪𤬬𤬭𤬮𤬰𤬳𤬵𤬶𤬷𤬺𤬼𤬿𤭀𤭁𤭂𤭃𤭄𤭌𤭍𤭎𤭏𤭐𤭑𤭒𤭓𤭔𤭕𤭗𤭘𤭛𤭜𤭝𤭞𤭟𤭠𤭡𤭢𤭣𤭦𤭧𤭨𤭩𤭪𤭫𤭬𤭰𤭱𤭳𤭴𤭹𤭺𤭻𤭼𤭽𤮀𤮅𤮆𤮇𤮈𤮉𤮊𤮋𤮎𤮏𤮐𤮓𤮔𤮕𤮖𤮘𤮙𤮚𤮛𤮜𤮡𤮢𤮦𤮧𤮨𤮩𤮪𤮫𤮭𤮮𤮯𤮰𤮱𤮲𤮳𤮵𤮷𤮸𤮹𥌯𥲁𥶸𥷖𦉐𦍭𦓓𦨆𦭈𦾳𧂛𧓐𧔀𧞕𧞙𧭌𧰓𨀄𨋐𩆣𩌯𩐛𩼭𬅎𬎨𬎫𬫱𩱵𩱷𩱸𢇒𢇓𢴰𧗒𧰙𨗂𩴪𪙧𣳩𪮲𫙩𬝩𬳰㙅㳭𢉣𣮃𣯂𤞥𤥯𥧷𦽻𧜯𨲃𩭚𩭼䢤𠮁𠰲𡊍𣏂𣪩𥑡𦸇𧺶𩳘𩳙榝𠝨𢄌𢘹𢞒𢫬𣈎𣉜𣻑𤍁𥓑𥤔𥻦𦃏𧏫𨐖𩗉𩮫𩴇𪀣𪄅𪑂剏剙㔙㤣㶜㻂䈂䑫䔊䦕䴵𡳧𡸫𡾛𢆛𢆟𢆢𢆣𢏳𢔧𢼩𣁊𥧋𥩵𥲂𥵪𦉇𦉐𦝷𦴏𧁕𧳉𧻓𧼦𧼲𨂲𨍍𨗙𩂦𩅅𩊖𪋋𪑰𪕒胼㕃䊙䍾䙹䢎𢍫𢓄𢝐𣥎𥓨𧗦𧙒𨃿𨊻𨡶𨢏𨢹𨲡𪂍𪗛𥈪𥤴𨕧𨘊𨴂𨶘𠱥𢍃𣮡𣽑𥑾𦯨𨁼𨃦𩚰𩝼𩣺𪑖𠻶𦮁𦯨𦱱𦳕𦴮𦸟𦻪𦿢𦿩𦿪𧁕𧂑𩅁𬝭𬞦 𦮁𦯛𦱱𦳕𦻪𦿔𦿩𦿪𧂑𠻶𦯸𦱤𦲇𦲈𦴮𦴰𦴳𦵝𦶪𦶭𦶯𦸳𦹈𦹉𦹊𦹍𦻟𦻠𦻡𦻢𦻣𦻥𦻦𦻧𦻨𦽷𦽸𦽹𦽻𦿠𦿢𦿣𦿤𦿥𧁕𧁗𧁻𧂱𧂳𧂴𧂵𧃺𧃻𧄩𧄫𧅎𧅏𧆁𧆚𦱓𦮁𦱠卿𠩥𡙮𣗐𧡈㹶𢌦𢽄䅍𥆑𥏎𤠜𦐿𣉡𨉈䩠䯕𦪅䱓𪊶𣪷𠿦𡅚臖䕟𡃳𢑅𢤀𢸁𦢯𦧅𤾒𦕍𧣍𨊶𨠁𨱤𩂸𩈌𩣤𩵨𪐨𪕁𨒆𡖢㔰𠄨迯𢫑𫊰𠨃𧵏𨳿𫒓𩊃𠨊𦍮𥮢𨛄𨜈𢬆𤈓𤷨𦛑𦮊𨔚㱘懕擪檿𣎩靨饜魘黶嬼懰藰䉧䬟𢤐𢷶𣞗𨮸𩙔昞邴㑂䇤𠅈𠇮𠛥𢨿𣍢𣍣𣍠𣍤𣍦𣍧𣍮𣍲𣍷𣍸𣍹𣍺𣎄𦚹𣎅𣎔𣎚𣎛𣎣𣎭𣎱𣎲𣍬𣍵𦛵𣎤𠻻𡺵𢩱𢲾𤝦𤿋𡶶𣧒𣴰𦽬𧗛𪄍鳏𣯉𣎕𤸄𧎖𢱣揑毁湼譭𢾌𧝷𡔤𡜫𣪂𩔣𪚘𢭉𦖐𨡒𨨳𨚶𨚽𨴞𣽮𤕁𤕆𤮫𨗽鿆𥙀𥙖𢆀𣄀𥵏𣛣𦼠𫙸𢑪𢑳𣪣値𣤳𥜩𠔬𨂒𪍅𬂃𨵷𩟣𪓲𥠅𥦺𫙪𧮭谻𧮷㲰𡫃𧕝𥩒𣡈𡢓𤗦𥴩𥵰𦃔𧒘𧬭𦮘𦭯𥩭𥩮䑐𤉟㣒㬝㽪䁬䆵䉕䎖䒏䙢䰝𠟂𡡑𡪠𡾽𡿘𢅋𢎒𢐞𢐷𢨉𢴣𤎯𤎰𤛢𤺧𤾥𥃙𦌝𦠇𦼏𧢐𧲅𧸑𨲯𩱭𪒟𪗐𪙭𪴕𬅎赣𡘢緰𢟿𤖼𥙎𥯠𥿯𦽤𧖴𧠨𧡒𧵬𨴳𩈛𪃻𩥆𩥜斊𦔋𦕺𦗊𪕔𬵺㚎㛊鏫䯁乊带濲緮隡練𠀤𠂎𠂒𠃓𠇇𠢍𠢅𠳮𡃶𡆢𡕥𡧑𡩵𡯦𡴒𡵉𡵂𡷔慤𢴇𢼸𣎆𣎗𣑫𣚯𣛯𣧷𣫎𤣥𤬾𤱧𥋕𥔮𥙨𥞛𦉶𦍍𦚩𦛱𦛵𦣅𦰋𦵕𦹗𧈮𧊶𧧨𨐖𨜊𨦾𨩪𩌥𩬻𪗓𪘉𪥌𤮤𪼾𫠎𫠤𫠩𫥎𫩠𫵖𬀽𬐼𬡖𭃂𭠍𭩮屮𡌧𢛨𢮁𣨝𤂷𤉪𤥽𩩘𩩦㓭㔠㡫㬞㵣㵧㷎㹇䅥䈓䋵䔽䔾䕣䗶䥟䦪䨠䫘𠂄𠥜𠾩𠿒𡇼𡽙𢆜𢇋𢉥𢎔𢢖𢢚𢶆𢷒𣂰𣨵𣰌𣿌𤢔𤩲𤸎𤺐𥀥𥈎𥢸𥴭𥻉𦅶𦝲𦤦𦩥𦪬𦼰𦼵𦿋𧇷𧝶𧝽𧼨𨆍𨉪𨞛𨭛𨲲𩍛𩦏𩦞𩩲𩮂𩯝𩹄𪆰𪑦𪓮𪕭𪘹𪙰喝褐謁𨗇㰈𮟀𮟝𬽦𢺬𬾿𭂅𭅺𭅽𭉘𭩥𭏀𭑑𭕉𭕋𮉰𭙣𭣱𭤀𭤊𭥬𭬐𭭃𭵜𭺾𭼵𮃎𮆃𮆴𮆽𮈵𮊿𮋀𮌔𮍛𮎦𦬳𮎰𮎷𮎧𮎵𮏄𮎾𮏑𮏖𭪙𮏩𮏼𮏻𮐃𮐻𮐼𮑊𮑶𮑚𫉬𮒗𮓈𮓣𮖥𮖿𮗀𮗁𮗨𮘸𮝝𮠸𮡄𮢉𮪠𮫘𮬬𬽙𬾹𠄗𭎈𭂔𭂚𫦱𭅟𭊏𭌰𭍏𭐮𭐢𭑚𭒑𭓳𭛧渓鶏𧮾𨿸𩤻𭛳𮛪𭜈𭢘𭦽𭫯𧏪𭬯𭑖𭰣𭵙𤏁凞𠘕煕𭶉𤀠𭵝𭵨𭶂𭵺𭸡𭻙𠤤𮄧𮄱𮅰𮆆𮇞𮉈𮋚𮋦𮋹𮏞𮑝𮑛𮑜𮗬𮘹𮝼𮟐𮡼𮢍𮢿𮣕𮦢稲㴞㷔𨂻𨺻𮘦𮧲𮩁𮨍𮩳𮪻𮬹𮮆𮯌𡊊𦒸𠙾涄䛣尐鿫鿬𣄳𮎁𮍨 災甾輜𦤶㗴𤾲㧡攑躼𠊎𠕆𠕇𢪱𢱋𧊅𨃰㧒揻𡟓𤆪𤆬𥰔𥴊𪜶𫝺𣍐覅𧟰𡠍甮𨖕抇迉咘泹迖俖氠炾凎唦娳迼堔崰敨湹舿萛塯蒆蒏榚滱蓛踍駇儊踙敿橶瞣蕱蕵螁瞷礂繌謢矂藞藲鞷韟蠤巕爦𡿒

## 2018/04/03

修改或重修以下字元：
𠎽𣈟𣜧𣥇𤜢𤬫𤽰𥃴𦽓𧮬𧿅𨾑𩑓𩡰𩡵𪜖𤣭𧈲𤣲㒏鋵㕔荣厢㕑厨𡺓𢔡𢾆𤭧𥍾𥏪𥚺𥻄𦂄𦎥𦝨𦞉𧳧𩀊𩋧𩘅𩘗𩤠𩩰甎章傽墇嫜嶂幛彰慞戅戆戇暲樟漳灨獐璋瘴瞕竷蔁蟑贑贛遧鄣鏱障騿鱆麞㔶

## 2018/04/01

I.字坊製作部改由李爾樅、內木一郎擔任主製作人，陳輝恒擔任聯合製作人，鍾啟堯、陳志泓、佟藍歌、Extc擔任聯合製作人。

## 2018/03/24

I.字坊製作部公開發佈「I.明體」字型檔：I.MingVar-5.10.ttf，版本資訊爲Version 5.10。

## 2018/03/13
內部釋出測試版本字型檔：I.MingVar-5.02.ttf，，版本資訊爲Version 5.02。

## 2018/03/12

新增以下字元：
隡𠳮ㄮㄯ㚎乊𠂒𠇇𡆢𡕥𡧑𦹗𪥌𫠤𭃂𭠍带𬺰𬼀𬼜𮆨𮣙𬽦𭃄𭘍𭎎𭜣𭢫𭬒𭰉𭼰𮐓𮙝𮜿𮝬𮦷𭌦𮊶𭍞𡘇𭕍𭠉𢺬𭧳𣎟𭭊𭳛𭵇𭶸𮍎𭻐𮀸𮁳𦦔𮃄𮃖𮇻𮊘𮊖𦖏𬻀𮭴𮙣𮟾𮫄𮫗𮓖𮭭𬺱𬺳𬺶𬻂𬺻𬻆𬻋𬻒𬻝𬻜𬻞𬻻𬼂𬼁𬼄𬻿𬼆𬼈𬼌𬼗𬼖𬼙𬼚𬼸𬺵𬺸𬺺𬼺𬼽𬼾𬼿𬽃𬽆𬽇𬽉𬽈𬽌𬽊𬽋𬽖𬽕𬽡𬽣𬽹𬾗𬾊𬾘𬾨𬾮𬿂𬾿𬿦𬿲𭀀𬿻𭀗𭀘𭀚𭀙𭀜𭀟𭀠𭀣𭀡𭀥𭀤𭀰𭀱𭁄𭂯𭁆𭁐𭆢𭵄𮊆𭁔𭁠𭁡𭁢𮉼𭁩𭁣𭁪𭁫𭁯𭁭𭁳𭁺𭁷𭁻𭂁𭂅𭂾𭃆𭃅𭃌𭃡𭃙𭃚𭃨𭃥𭃲𭃭𭄏𭄘𭄞𭄣𭄫𭄧𭄴𭄹𭅂𭅃𭄿𭅅𭅊𭅐𭅑𭅒𭅘𭅝𭅡𭅩𬻁𭅲𭅴𭅳𭅵𭅺𭅽𭆆𭆇𭆉𭆏𭆙𭆡𭆞𭆤𭆥𭆪𭆫𭆬𭆯𭆴𭆶𭇁𭇥𭇢𭇪𭈆𭍠𭈬𭉙𭈹𭈼𭉘𭉈𭉵𭊌𭺮𭉿𭋛𭋘𭌔𭌌𭍥𭍼𭖒𭩥𭎙𭎕𮎺𮎹𭏀𭏕𭏛𭐀𭐖𭐣𭐬𭐱𭐴𭐳𭐸𭑃𭑅𭑊𭑑𭑒𭑏𭑕𭑘𭑟𭑣𭑨𭑵𭑾𭑿𭒡𭒭𭓂𭓔𭓗𭓩𭓯𭓾𭓿𭔅𭔃𭔄𭔀𭔖𭔬𭔲𭔱𭔵𭔹𭔸𭔿𭔾𭕇𭕉𭕋𭕐𭕒𭕘𭕝𭕭𭕾𭕿𭖀𭖄𮉰𬽍𭖱𭗒𭗓𭗞𭗻𭗼𭗾𭗿𭘀𭘆𭘉𭘊𭘞𭘧𭘣𭘴𭘾𭙌𭙗𭙣𭙻𭙺𭚃𭚓𭚒𭚘𭚡𭚥𭚨𭚵𭚸𭚹𭚼𭛁𭛋𬻈𬻑𬻘𬻥𭐕𭛠𭛩𭜎𭜍𭜴𭜤𭜥𭜦𭜧𭜵𭜳𭞅𭞋𭞌𭞥𭞐𭞹𭟝𭟞𭟯𭟲𭟶𭟼𭟾𬻐𭠂𭠅𭠡𭠘𭠠𭡠𭢆𭣔𭣢𭣣𭣩𭣯𭣰𭣱𭣬𭣴𭣵𭣹𭣸𭣻𭣺𭣚𭤁𭤂𭤀𭣾𭤊𭤋𭤏𭤓𭤟𭤥𭤧𭤪𭤩𭤮𬻵𬻷𭤽𭥆𭥍𭥎𭨘𭥟𭥗𭥫𭥬𭥭𭦃𭦗𭦌𭧂𭧑𭧟𭨗𭨽𭩡𭩠𭩱𭩲𭪁𭪀𭪗𭪖𭪕𭪵𭫎𭪴𭝠𭪙𭱁𭫈𭫒𭫝𭫘𭫟𭫞𭫺𭫳𭫬𭬐𭬑𭬜𭬨𭬳𭬺𭭃𭭋𣢸𭭏𭭎𭭓𭭔𭭕𬼘𬼫𭭩𭭾𭭽𭮁𭮀𭮅𭮈𭮑𭮖𭮣𭮭𭮰𭮱𭮶𭮳𭮺𭮻𭮼𭯇𭯰𭯴𭰁𭰋𭰊𭰐𭰏𭰖𭰦𭱂𭰹𭱡𭲑𭳏𭳍𭳺𭳿𭴑𭴚𭴙𭴷𭴾𭴺𭵈𭵡𭵠𭵜𭵼𭶊𭶡𭶪𭷣𭷰𭷺𭸣𭸮𭸽𭹕𭺆𭂬𭺛𭺜𭀝𭺣𭺥𭺧𭺫𭺪𭺳𭺸𭺺𭺿𭺾𭻊𭻉𭻗𭻥𭻩𭻨𭻰𭻯𭻵𭻴𭻺𭻿𭼂𭼃𭼅𭼋𭼖𭼵𭼽𭐝𭼾𭽁𭽂𭽆𭽇𭽒𭽪𭽼𭾂𭾆𭾋𭾊𭾏𭾐𭾜𭾟𭾩𭾪𭾱𭿓𭿗𭿜𭿥𭿪𭿵𭿶𭿷𭶗𮁌𮁨𮁮𮂊𮂞𮃎𮃛𮃢𮃣𮩦𮃻𮄒𮄜𮄣𥬃𮅃𮅏𮅒𮅙𮅕𮆃𮆴𮆽𮇀𮇂𮇓𮇣𮇬𮈅𮈄𮈋𮈔𮈑𮚄𮈛𮚇𮈣𮈵𦃋𮈱𮈷𮉗𮉟𮉵𮊁𮊄𮊂𮊓𮊔𮊌𮊒𭃱𮊫𮊵𮊷𮊺𮊸𮊿𮋀𮋊𮋒𮋝𮋻𮌁𮌄𮌆𮌇𮌋𮌒𮌖𮌔𮌚𮌕𮌜𮌩𮍄𮍉𮍌𮍍𮍐𮍛𮍠𭁇𭁈𮍥𮍨𮍲𮍹𮎁𮎅𮎆𮎋𮎓𮎗𮎛𮎜𮎦𦬳𮎰𮎷𮎧𮎯𮎵𮏄𮎾𮏋𮏀𮏑𮏖𮏓𮎿𮏔𮏩𮏼𮏻𮐃𮐦𮐮𮐥𮐼𮑊𮑶𮑚𮒐𮒗𮒚𮒨𮒙𮒫𮓈𮒿𮒹𮓋𬻉𭅯𮓗𭅰𮓙𮓘𮓚𮓜𮓞𮓠𮓡𮓣𮓥𮓰𮓱𮓵𮔁𮔇𮔔𮔉𮔝𮕂𮕃𮕈𮕒𮕔𮕛𮕜𮕝𮮠𮕡𮕩𮕫𮕪𮕱𮕺𮖚𮖠𮫟𮖥𮖾𮖿𮗀𮗂𮗁𮗃𮗘𮗚𧢛𮗠𮗟𮗨𮗮𮗷𮘁𮘂𮘈𮘎𮘐𮘪𮘦𮘤𮘭𮘸𮘾𮙆𮙅𮙘𮙛𮙞𮙟𮙠𮙪𮙮𮙲𮙿𮙾𮚃𮚆𮚅𮚋𮚌𮚑𮚖𮚶𮚸𮛩𮜒𮜬𮝇𮝝𮝻𮝾𭆒𮞂𮞅𮞆𮞘𮞭𮞷𮟃𮞽𮟞𮠑𮠕𬻕𮠖𮠚𮠶𮠸𮡄𮡉𮡌𮡱𮡿𮢉𮢟𮢤𮣐𮣑𮣹𮤇𮤨𮤩𮥌𮥏𮥓𮥚𮥃𮥶𮥺𮥹𬽜𮥿𮦂𮦄𮦆𮦟𮧇𮧊𮧌𮧓𮧞𮧟𮧰𮧯𮧮𮨀𮨇𮨈𮨦𮨷𮩑𮩼𮪇𮪍𮪜𮪠𮪦𮪬𮫇𮫎𮫏𬼍𮫖𮫘𮫙𮫮𮫭𮫬𮫯𮫰𮫲𮫴𮫳𮫽𮫼𮫺𮫾𮬁𮬂𮬉𮬆𮬏𮬎𮬔𮬓𮬘𮬗𮬬𮬲𮬼𮭘𮭝𮭟𮭱𮭶𮭷𮭹𮮁𮮑𮮐𭔌𮮦𮮳𮮲𮮵𮮰𮮴𮮱𮮺𮮼𮮽𮯗𮧻𮯟𮯞𮯝𮯜𬺽𬻇𬻎𬻛𬻸𮮻𬽚𬽙𬽝𬽠𬽧𬽤𬽫𬽩𬽶𬽷𬽮𬾁𬾄𬾎𬾚𬾻𬾹𬿛𬿶𬿭𭀉𭀨𭁉𭁕𭁗𭎈𭁨𭁦𭁲𭁴𭁶𭁼𭂈𭂎𭂑𭂓𭂔𭂗𭂚𭂜𭂫𭂴𭂳𭃤𭃰𭃿𭄥𫦱𭄳𭅁𭅀𭅍𭅔𭅟𭅠𭅹𭅼𭆁𭆃𭆄𭆐𭆔𭆷𭇊𭇆𭇑𭇗𭇖𭈝𭉇𭉠𭉩𭊊𭉢𭊏𭊉𭋆𭍶𭌰𭍏𭍦𭎀𭍻𭎅𭎛𭎢𭎤𭎜𭎮𫮍𭏍𭏐𭏾𭐊𭐒𭐙𭐦𭐮𭐰𭐠𭐢𭐥𭐧𭑂𭑋𭑍𭑖𭑚𭑜𫯱𭑞𭑪𭑮𭑯𭒀𭒑𭒔𭒗𭒞𭒸𭒼𭒽𭓇𭓈𭓘𭓕𭓦𭓳𭓻𭔗𭔟𭔶𭔷𭕙𭕥𭕯𭖃𭖌𭖓𭖫𭖬𭖩𭗃𭗇𭗕𭗔𭗪𭗭𭗶𭘒𭘑𭘚𭘘𭘩𭘫𭙍𭙒𭙔𭙡𭙧𭙯𭙱𭙸𭙶𭚀𭚂𭙽𭚑𭚟𭚣𭚪𭚬𭚮𭚴𭚶𭚺𭚿𭛂𭛅𭛌𭛍𭛝𭛞𭛣𭛧𭛪𭛳𭜂𭜈𭜊𭜐𭜑𭜘𭜡𭜛𭜙𭜮𭜾𭝅𭜶𭝆𭝑𭝝𭝌𭝙𭝡𭝢𭞁𭝷𭝨𭐫𭞞𭞘𭞵𭞏𭞾𭟁𭟄𭟮𭟱𭟹𭡈𭡷𭡸𭢏𭢅𭢧𭢘𭢯𭣄𭤄𭤃𭤕𭤘𭤖𭤗𭤙𭤛𭤣𭤯𭥜𭥚𭥘𭥦𭥧𭥸𭦀𭦁𭦑𭦙𭦚𭦠𭦛𭦩𭦽𭧌𭧠𭧛𭧽𭧩𭧵𭨍𭨔𭦨𭨰𭨹𭩜𭩟𭩩𭩧𭩳𭪒𭪈𭪮𭪚𭪯𭪛𭪲𭪜𭪶𭫍𭫕𭫚𭫜𭪼𭫓𭫢𭫿𭫸𭫯𭫰𭬁𭬂𭬊𭬤𭬯𭬴𭤠𭭒𭭘𭭦𭭰𭮃𭮎𭮗𭮫𭮵𭮴𭯃𭯶𭰑𭰣𭰯𭰰𭰩𭰼𭱄𭱚𭱏𭰱𭱎𭱅𭱆𭱰𭱱𭱩𭱪𭱴𭱢𭱮𭲃𭲄𭲋𭱼𭲌𭲍𭱽𭲒𭲅𭱷𭲓𭲧𭲠𭲞𭲔𭳈𭲮𭲳𭳁𭳚𭲾𭳊𭳗𭳓𭳐𭳖𭳩𭳠𭳣𭳤𭳯𭴖𭴫𭴬𭴿𭴻𭴽𭵋𭵙𭶉𭵳𭵝𭵨𭶂𭵺𭵴𭶒𭶌𭷄𭷙𭷘𭸈𭸍𭸒𭸠𭸡𭸵𭸶𭸼𭹄𭹖𭹗𭹣𭹤𭹲𭹽𭹼𭹷𭺱𬎾𭻌𭻒𭻙𭻸𭼎𮍒𭼸𭼼𭽅𭽋𭽍𭽏𭽙𭽜𭽞𭽸𭽿𭾇𭾦𠤤𭿦𭿩𭿿𮀁𮀃𮀇𮀐𮀠𮀯𮀳𮀶𮀿𮁃𮁣𮁢𮁩𮁤𮁯𮁴𮁲𮁰𮁶𮁹𮂇𮂏𮂔𮂚𮂗𮂜𮂢𮂧𮂯𮂲𮂺𮃁𮂼𮃗𮃜𮃬𮃰𮃴𮄂𮄁𮄧𮄮𮄭𮄯𮄱𮄴𮄵𮄿𮅉𮅔𮅞𮅡𮅯𮅰𮆆𮅶𮆯𮆶𮆪𮇋𮇜𮇞𮇩𮇵𮈃𮈆𮈇𮈌𮈏𮈕𮈜𮈦𮈰𮉈𮉱𮉸𮊅𮊢𮊥𮊪𮊾𮋁𮋚𮋦𮋮𮋰𮋸𮋹𮌂𮌏𮌐𮓢𮌛𮌦𮌷𮌺𮍈𮍣𮍧𮍫𮍬𮍭𮍰𮎍𮎢𮎣𮎪𮎸𮎻𮏇𮏌𮏍𮏐𮏞𮏁𮏒𮏧𮏿𮏦𮏣𮏥𮏳𮐇𮐩𮐹𮐻𮑝𮑛𮑜𮑠𮒔𮑼𮒋𮒛𮒘𮒜𮓀𮓛𮓦𮓯𮓼𮓺𮓽𮔈𮔗𮔰𮕋𮕤𮕥𮖇𮖛𮖯𮖻𮗈𮗓𮗖𮗜𮗫𮗭𮗬𮗲𮗽𮘊𮘙𮘡𮘥𮘹𮘽𮙄𮙗𮙚𮙜𮙦𮙭𮚁𮚍𮚚𮚕𮚦𮚰𮚴𬦌𮛙𮛪𮛡𮜀𮜉𮜕𮜶𮝀𮝞𮝩𮝼𮞉𮞟𮞙𮞚𮞰𮞾𮟈𮟗𮟐𮟚𮟘𮟣𮟲𮟻𮠘𮠭𮠳𮡏𮡗𮡦𮡤𮡧𮡪𮡨𮡫𮡯𮡰𮡮𮡴𮡸𮡼𮡹𮢀𮢌𮢃𮢍𮢕𮢖𮢊𮢜𮢚𮢛𮢡𮢙𮢢𮢨𮢴𮢬𮢻𮢼𮢾𮢿𮣍𮣗𮣏𮣕𮣁𮣞𮣟𮤚𮤜𮤧𮤾𮥙𮥴𮥵𮥷𮥾𮦀𭬲𮦢𮦜𮧀𮧒𮧗𮧲𮨍𮨽𮨾𮩳𮩺𮪈𮪻𮫋𮫵𮫹𮬀𮬇𮬙𮬰𮬱𮬹𮭋𮭐𮭠𮮄𮮆𮮹𮮾𮯃𮯅𮯄𮯇𮯈𮯎𮯌𮯋𮯛𮯠𭓽𮂻𮇎𭆂𬼟𣦑𭂲𭓱𮩁𛀂𛀅𛀃𛀄𛀆𛀇𛀈𛀉𛀊𛀋𛀌𛀍𛀎𛀁𛀏𛀐𛀑𛀒𛀓𛀔𛀕𛀖𛀗𛀘𛀙𛀚𛀛𛀢𛀜𛀝𛀞𛀟𛀠𛀡𛀣𛀤𛀥𛀦𛀧𛀨𛀩𛀪𛀫𛀬𛀭𛀮𛀯𛀰𛀱𛀳𛀲𛀴𛀵𛀶𛀷𛀸𛀹𛀻𛀺𛀼𛀽𛀾𛀿𛁀𛁁𛁂𛁃𛁄𛁅𛁆𛁇𛁈𛁉𛁊𛁋𛁌𛁍𛁎𛁏𛁐𛁑𛁒𛁓𛁔𛁕𛁖𛁗𛁘𛁙𛁚𛁛𛁜𛁝𛁞𛁟𛁠𛁡𛁢𛁣𛁤𛁥𛁦𛁧𛁨𛁩𛁪𛁭𛁫𛁬𛁮𛁯𛁰𛁱𛁲𛁳𛁴𛁵𛁶𛁷𛁸𛁹𛁺𛁻𛁼𛁽𛁾𛁿𛂀𛂁𛂂𛂃𛂄𛂅𛂆𛂇𛂈𛂉𛂊𛂋𛂌𛂎𛂍𛂏𛂐𛂑𛂘𛂒𛂓𛂔𛂕𛂖𛂗𛂙𛂚𛂛𛂜𛂝𛂞𛂟𛂠𛂡𛂢𛂣𛂤𛂥𛂦𛂧𛂨𛂩𛂪𛂫𛂬𛂭𛂮𛂯𛂰𛂱𛂲𛂳𛂵𛂴𛂶𛂷𛂸𛂹𛂺𛂻𛂼𛂽𛂾𛂿𛃀𛃁𛃂𛃃𛃄𛃅𛃆𛃇𛃈𛃉𛃊𛃋𛃌𛃍𛃎𛃏𛃐𛃑𛃒𛃓𛃔𛃕𛃖𛃗𛃘𛃙𛃚𛃛𛃜𛃝𛃞𛃢𛃟𛃡𛃠𛃣𛃤𛃥𛃦𛃧𛃨𛃩𛃪𛃫𛃬𛃭𛃮𛃯𛃰𛃱𛃲𛃳𛃴𛃵𛃶𛃷𛃸𛃹𛃺𛃻𛃼𛃽𛃾𛃿𛄀𛄁𛄂𛄃𛄄𛄅𛄆𛄇𛄈𛄉𛄊𛄋𛄌𛄍𛄎𛄏𛄐𛄑𛄒𛄓𛄔𛄕𛄖𛄗𛄘𛄙𛄚𛄛𛄜𛄞𛄝𠀤𫵖𫠩𬐼𪼾𫥎𦣅𬀽𡩵𦉶𦛱𦵕𨐘𨜊𧈮

## 2018/03/10

修改或重修以下字元：
偰剨割喫嗐噄囓契害幰恝憲挈揳搳攇栔楔櫶洯湱潔瀗犗猰瘈瘛瞎砉碶磍禊稧窫絜緳縖葜藼蛪螛褉觢豁轄辖鍥鎋锲騞鶷齧㓗㓞㓶㗉㛃㝣㦥㪡㮫㮮㲅㸷㼤䂮䐼䘆䚉䛚䜢䝟䤿䥛䦬䧮䫔䱮𠎧𠜵𠟽𠢆𠹙𡁁𡊷𡐤𡟲𡫴𡬨𡮞𡿖𢍆𢖘𢝇𢞐𢞩𢴲𢻜𣚃𣣶𣭭𣳱𣸲𤊴𤟐𤟻𤠵𤸞𤸪𤺚𤼂𥊯𥎆𥰶𦄜𦎱𦚨𦝜𦢽𦤬𦧮𦩣𦳴𦵯𦺧𧑨𧓞𧜅𧩶𧯆𧳳𧻘𧼪𧽁𧾨𨀦𨂰𨏥𨜒𨜣𨴒𩍹𩏓𩝛𩡔𩥌𩪃𩮁𩮝𪀡𪃈𪅸𪇜𪙏𥡞嚼灂爝爵皭穱釂㩱㬭䂃𠘣𢥚嗞嬨孳嵫慈滋濨甆磁礠禌稵糍螆鎡鰦鶿鷀㘂㽧䈘䗹𡙠𢶴𤂇𤮀𤲸𥔵𦖺𧁖𨭨𩉋𩼰𪇔𪑿𪴆𬣐𬵱攛癙竄躥鑹鼠鼢鼣鼤鼥鼦鼧鼨鼩鼪鼫鼬鼭鼮鼯鼰鼱鼲鼳鼴鼵鼶鼷鼸鼹鼺䶂䶃䶄䶅䶆䶈䶉𣜌𥎣𧒑𪔸𪔺𪔻𪔼𪔽𪔾𪔿𪕀𪕁𪕂𪕃𪕄𪕆𪕇𪕈𪕉𪕊𪕋𪕌𪕍𪕎𪕏𪕐𪕑𪕒𪕓𪕔𪕗𪕘𪕚𪕛𪕜𪕝𪕞𪕟𪕠𪕤𪕦𪕧𪕨𪕩𪕪𪕫𪕬𪕭𪕮𪕯𪕰𪕱𪕴𪕵𪕶𪕷𪕸𪕹𪕺𪕽𪕾𪖀𪖁𪖂𪖃𪖄𪖅𪖆𪖇𪖈𪖉𪖋𪖌𪖍𪖎𪖏儠巤擸爉犣獵臘蠟躐邋鑞鬛鬣鱲㯿㲱䁽䃳䜲䝓䪉𡂏𡅘𡓍𣰫𤁯𤢪𥀰𦆻𦒦𦒩𦼤𧀨𧞪𧭞𧰠𩙑𩧆𪇹𪙷俏削哨娋宵屑峭帩弰悄捎揱旓梢榍消潲焇琑痟睄矟硝碿稍筲箾糏綃绡艄莦萷蛸誚诮趙踃輎逍銷销陗霄鞘鞩韒颵髾魈鮹㣯㨝㲖㲵㴥㴮䇌䈰䈾䌃䏴䔠䘯䨭䴛𠋱𠠄𡁻𡎮𡜽𡟩𡡏𡯩𡹺𢓮𢞜𢼼𣆺𣕇𣜎𣤎𣭱𣸛𣹝𣺰𣻘𤙜𤞚𤫾𤸮𤿨𥍕𥙬𥳓𥵦𥹶𦂗𦂚𦄏𦋞𦐺𦓴𦚍𦞚𦵱𦷟𦿃𧜔𧣪𧳍𧶈𨛍𨨺𨲆𩠦𩡈𪁎𪃅𪌯𪍛𪑊𪙌𪙑𬓹㢓䀍䤗𠮒𡈠𡔕𢕔𢦅𢷢𣫡𤍤𥎟𥕞𥪮𥫔𥫖𥸡𧆐𧗛𧗜𧫱𧹉𧽣𨙏𩅈𩌬𩕆𪅂童僮勭噇墥幢徸憧撞曈朣橦氃潼燑犝獞疃瞳穜罿膧艟蕫蹱鐘㠉㼿䂌䃥䆹䚒䝑䡴䭚䮵䴀𠟍𡦜𡰒𡰕𢖜𢣛𢤤𢤦𢨒𣄢𣦟𤺄𥫂𥫎𥳘𥷈𦌜𦏆𦒍𦔛𧑆𧘂𧝎𧬤𧽿𨝯𩍅𩕉𩦍𩪘𩻡𫝿僧噌囎層嶒憎朆橧潧熷璔甑矰磳竲繒缯罾譄贈赠蹭鄫鏳驓鬙鱛㣒㬝㽪䁬䆵䉕䎖䒏䙢䰝𠟂𡡑𡪠𡾽𡿘𢅋𢎒𢐞𢐷𢨉𢴣𤎯𤎰𤛢𤺧𤾥𥃙𦌝𦠇𦼏𧢐𧲅𧸑𨲯𩱭𪒟𪗐𪙭𪴕𬅎僂嘍塿寠屢屨嶁廔慺摟擻數樓櫢氀漊熡甊瘻瞜窶簍籔縷耬膢艛蔞藪螻褸謱貗軁遱鏤鞻髏鷜㜢㟺㡞㪹㺏㻲䄛䅹䝏䣚䫫䮫䱾𠐍𠞭𡀿𡂡𡗆𡰌𡰓𡾄𢿘𣤋𣯫𣰢𤗬𤬏𤻺𥕍𥖻𦌁𦌑𦎹𧁾𧂜𧃒𧔅𧢃𧰃𧲕𧷡𨊖𨘠𨻻𩀮𩄽𩫰𪈜𪍣皀匓即卿厩嘅嚮堲塈幯廄廐慨揤摡擳既曏楖概槩櫛櫭溉瀄癤穊節膷莭蔇薌蝍蠁蠞鄉鄕響饗鯽鱀鱜鵖㗽㘉㦢㸅䀈䇒䊠䐚䐴䦳䲙䳭𠌰𠤙𡇠𠐉𠨞𠨠𡃢𡄊𡏲𡨇𡪆𡳅𡸎𢟪𢷽𣪘𣣝𣯦𤊵𥀾𥖡𥠈𥣮𦟡𧐆𧫜𧬰𨂢𩞊𩞚𩺺𪄵𬵺響灪爩䖇𥠴𩰤啸嘯彇橚櫹歗潇潚瀟熽璛箫簫繡萧蕭蟰蠨鏽驌鱐鷫㔅㩋㪩㬘䃤䊥䎘䐹𡣾𢑁𢸳𢹱𤄙𤑳𦘤𦢩𦪓𦪲𧅣𧹀𧽷𨅋𩘹𩙚𪆭𠥦𠪙𡐢𢎑𢨇𢨚𢨞𣚣𤳓𤺆𤼌𥛴𥤌𦒖𦔜𦔫𦾲𧃞𧃟𧃢𧇽𧑌𧾰𨅜𨙒𨯼𨾂𩙺𩞫𩦸𩴜𪒕𬢄𬵫𬵷衰榱滖簑縗蓑㲤䙑𤠠𤸬𬧭𠣕𠩈𠰍𡸌𢦴𢨸𤔕𤤛𥅖𥘭𥦠𥩣𥯸𦊝𦗊𦙴𧉶𧏼𧣓𨈫𨲢𨳳𨾨𩒊𩨻𩶃𩿢𪌘𪏜𪐴𪚹𬷗辰侲傉儂唇嗕噥娠媷宸屒嶩帪憹振搙擃敐晨曟桭槈檂欁浱溽滣漘濃燶癑磭祳禯穠縟繷缛耨脣脤膿莀蓐蕽薅蜃蜄裖褥襛誫譨賑赈辰辱農辳辴鄏醲鋠鎒陙震鬞鷐麎齈㖘㦺㫳㰮㲀㺜䀼䁸䃩䅶䆣䔚䞅䟴䢅䢇䢈䢉䣅䥎䫃䳲䵜𠘊𠸸𡝌𡻌𢖢𢛚𢟲𢟹𢥯𢦿𢾯𣊤𣋏𣘣𣭽𣯋𣰊𤅛𤚨𤚾𤡠𤣜𤱼𤴌𤼝𥗸𦍇𦗳𦵢𦸳𧒏𧗈𧟒𧣨𧱽𨑆𨑇𨑉𨑊𨑋𨑌𨤉𨲳𩀭𩅽𩇀𩟊𩱜𩱨𩼅𪁧𪆯𪑾𪒬𪓧𪘝𫋏騟㓱䃋䕆䜽䠼䤅䩱䬔䵉𠕦𡫞𢆂𢋅𢔢𢶖𢾄𣂮𣈥𤀨𤚎𤻍𦩞𦸄𧱬𧼯𨵦𨽙𩜶𪃎𪉰𪍍𪎨吳俁噳娛悞澞筽脵茣虞蜈誤鋘鸆麌㵄㻍𠱐𡔣𡷤𤉇𤝲𧍩𩦢𪋬𪕜𫚾𬗙高傐嗃嚆塙嵩嵪巐搞敲暠槀槁歊毃滈瀥熇燺犒皜碻禞稾稿篙縞缟翯膏蒿薃藁藃藳謞鄗鎬镐髇\髛髜髝髞鰝鶮㙵㪣㰏㸀㾸䐧䧚䬘䮦䯨䯪䯫𡎲𡒋𡦩𡽝𢑸𢞟𣝏𣩅𤀰𤠖𤢨𦓄𦼸𦿗𦿣𧂎𧂕𧎸𧕔𧜉𨃤𨉲𩌡𩎏𩙷𩝝𩥊𩪿𩫀𩫁𩫂𩫆𩫇𩫊𩫍𩫎𩫔𩫕𩫚𩫞𩫥𩫦𩫪𩫲𩫳𩮘𬎯𬏐𬖰亭停婷嵉揨楟渟碠聤葶蝏諪䁎𠅹𠆙𡅄𢾊𣂳𣂴𤗞𥯢𦂃𦝞𧶺𨉬𩐴𩤙𩹇𪑬亳毫𤡇𦹾豪儫嚎壕檺濠籇蠔譹㠙㩝䧫𧥉𬵵亮喨湸𢝋𡎲膏䯧亯湻醕㪟䈞𠅩𠆌𡃥𡓑𡔊𡔋𢐻𢤈𢥦𢥲𣀦𣌘𤂸𤑴𤜃𤮩𥌲𥤁𥫉𥲮𥴀𦎧𦏧𦤘𦴒𧔫𧭺𨣶𨯢𨰩𨰮𨰯𪈷畗𩫏䯬𡓣𡾘𨟍𩫠𩫧𩫨𩫩𩫫𩫭𩫯𩫰𩫱𪈃𣠐𤅝𤅻𩇑𩎏𩫮𢌓𩫖𩫃𩇊亴𢜖𣨻稁薧䯧𥗧𦕺𦽡𦿗𧓂𨟐𪁚㙶𢂋𡯶𡰗𡰜𡰔𠅖𠅠𠅷𠆆𡕨𣹾𤒆𤚮𧭫𨣳𨪟𩁛𪆾𪈋𦞶𦓠鬲嗝囐塥巘巚搹曧槅滆瀜灊獻瓛甗竵翮膈蒚虉融螎讞鎘钀镉隔鬲鬳鬴鬵鬷鬸鬹鬺鬻鷊齾㣂㩵㬏䃒䈪䙐䛿䡾䣓䩹䮥䰙䰚䰛䰜䰝䰞𠿎𡁑𡢓𡿕𢑋𢔸𢖉𣠟𣡌𤄵𤅊𤗦𤡎𤫣𤫨𤬝𥉅𥴩𥵰𥻥𦃔𦉧𧒘𧓞𧖓𧤜𧬭𨍮𨏬𨏾𨢌𨤅𨽨𩇒𩍻𩦣𩰫𩰬𩰭𩰯𩰱𩰲𩰳𩰴𩰶𩰹𩰻𩰼𩰾𩰿𩱁𩱂𩱃𩱅𩱆𩱇𩱈𩱉𩱋𩱍𩱎𩱏𩱐𩱑𩱒𩱓𩱔𩱖𩱗𩱘𩱙𩱚𩱛𩱜𩱝𩱞𩱟𩱠𩱡𩱢𩱣𩱤𩱥𩱦𩱧𩱨𩱪𩱫𩱬𩱭𩱮𩱰𩱱𩱲𩱳𩱴𩱵𩱶𩱷𩱸𩹺𪈊𪚋畐偪冨副匐堛墖富幅愊揊楅湢煏畣疈福稫腷葍蔔蝠褔諨踾輻辐逼鍢鰏鶝㨽㽬䈏䋹䒄䔰䕎䮠䵗𠔸𠠦𡬂𢑍𢠲𢾇𤃺𤐧𤓜𤓞𤔜𤗚𥔁𥻅𦑞𦔆𦩡𦸕𦽌𦿁𧕙𧹭𨄑𨄩𨏟𨵩𨺤𩋨𩍏𩘆𩜰𩭺𩯅𪆠𫋖𫙻𫣕𫲮𬣖臺儓嬯懛擡檯籉薹㘆𤗿𧭏𩦽𪒴㐭亶儃凛凜勯啚圖壇壈嬗廩廪憻懍懔擅旜檀檁檩氈氊澟澶灗燣璮癛皽禀稟繵羶膻蟺襢譠邅鄙顫顲颤饘驙鱣鸇㔊㣶䁴䃪䄠䆄䉡䕊䕲䡀𠘡𠿞𡅹𡆎𡓔𡳄𢅒𢈺𢋃𢐹𢤭𣋊𤎭𤑓𤒀𤖣𤖧𤢏𤮜𤹦𤺺𥢺𥼷𦏫𦒜𦼹𧖞𧾍𨆁𨎹𨟏𨣚𨭖𨲵𩁉𩉊𩍕𩎄𩕤𩙼𩯤𩽱𪓼𪙵𪲪𪷤𫄊嗇樯墻嬙廧懎檣濇牆穡繬艢薔蘠轖㱇䉢𠎸𠟩𠢳𡫆𤛷𧃻𧒗𩍙𩏫𩕡𩼒喬僑勪嘺墧嬌屩屫嶠憍撟敽橋毊燆犞獢矯礄穚簥繑蕎蟜譑趫蹻轎鐈鞽驕鱎鷮㝯㠐㢗䀉䎗䚩䢪𠿕𡁗𢄹𢐟𢻤𣤙𣦜𣪽𣯹𦒓𨇊𨝰𨲭亨哼悙梈烹脝㧸䥋𣨉𦨾𨢶享啍噋嚲埻塾墎墩墪孰崞廓弴惇憝憞撉撴敦暾朜椁槨橔淳漷潡焞熟燉犉犜礅稕綧蜳諄譈谆蹾郭醇錞鐓鐜镦霩鞟鞹韕驐鯙鶉鷻鹑㗥㝄㝇㨃㨯㬿䁨䃞䃦䇏䔻䧐䪃䵍𠆓𠓎𠩭𡥹𡦛𡦟𡦡𡦨𡻙𡼖𢨊𢻓𣋄𣮢𤭞𤰎𥂣𥂦𥇜𥕖𦗒𦪔𦽑𧑒𧝋𧝗𧰄𨟞𨶝𨷙𨿡𩞤𪂎𪆃𪆝𪏆𪑒𬍳京倞僦凉剠勍噈婛就幜弶影惊憬憱掠撔景晾暻椋殧涼澋灏灝猄琼璟綡翞諒谅蹴蹵輬鍄顥颢鯨鲸鶁鷲鹫麖黥㔀㠇㩆㹁䁁䝶䣼䭘䯫𠑱𠒨𠬇𡅹𡐹𡬱𡮎𡰗𡰜𢀍𢇔𢈴𢒬𣄴𣄵𣌚𣨣𤂖𤎼𤷦𥳛𥷛𥷼𦌦𧌬𧑊𧑙𧤀𧫾𨗈𩀻𩐿𩗬𩘁𪆩𬄣复履復愎椱澓癁稪腹蕧蝮複覆輹鍑馥鰒鳆㙏㠅㬼䧗䨱䪖䮡𠣴𠣾𡐣𡑉𡞪𣦇𤟱𤸑𥦸𥨍𥪚𥳇𥵩𥷱𦎭𦩟𧄏𧕡𧼱𩋟𩜲𪃃𪐒𫓍𠳮槗𤠬𦃣𦑽𧤦𨃧𨎄𩌚𩺙𪄘剎弒摋樧殺蔱鎩閷䊛䓭𢼢寺侍偫塒峙崻庤待恃持時榯歭洔溡特畤痔秲等蒔詩诗跱邿鰣鼭㣥㭙䓁䝰䦙𠍰𡀗𣊒𣻞𤚟𤲔𤲵𤸟𥩳𥹩𥻵𦱎𦱰𦵟𦸎𧎬𧠴𧶱𨂄𨃯𨨲𩶬𪀔𪃝𪕵𪗺𬠟𬰈𬵣敖傲厫嗷嗸嚽嫯嶅廒慠摮滶熬獒獓璈磝聱蔜螯謷謸贅赘遨鏊隞驁骜鰲鳌鷔鼇㜜㟼㠂㥿䦋䫨䮯䵅𠞪𠢕𢕟𢧴𢳆𣊁𣘢𦪈𨄨𨅚𨫼𩕀𩘮𩪋𩪕𩮯𩱏隡薩𡄳𢹵𪎅罒罗椤猡箩萝逻锣罘罚罛罜罝罞罟罠罡堽鎠㓻㟵䌉𢱫𣗵𣦐𤌗𤭺𦋳罢摆罴罣𤌒罤罥罦罧罨𤪄罩罪嶵檌㠑䊫𢶀𣿓𨗻𬠯罫罬𡢑罭置㯰𧄗罯罱署曙濖糬薯鱰𡣈𥵟𪋰罳罵羈𢤇𦌭𦍈𫻥罶罷擺犤矲藣襬㔥䆉䎱䥯𠐌𢅩𢸇𤁣𥶓罸罹罺罻罼罽瀱蘮𥷙𦇧罾罿羁羂羃羄羅儸囉囖攞曪欏玀籮纙蘿邏鑼饠㦬㿚𡆆𡆗𡤢𡿇𡿏𢅾𣩿𣱀𤄷𤓓𥗴𥗿𦣇𧟌𧹐𨇽𩉙𩎊𩵇𩽰𪈰𪎆𬠻羆𤜑𧄾𧟍𨰟羇羈𫻥羉詈罰藅㦒𠟟買嘪簤蕒賣鷶㜥㵋䁲䚑𢠼𧘃𧘅𧶶𧷓𩀺𩍃䍐𢆦䍓䍔𦞗䍖䍗䍘䍚䍛䍜䍝䍟䍡䍢䍣䍤䍥䍦𡶩𦉬𦋪𦉷𦉹𦉾𦊁𦊂𦊃𦊆𦊏𦊐𦊑𦊒𦊓𦊔𦊤𦊫𦊼𦊽𦊾𦊿𦋆𦋈𦋉𦋊𦋋𦋝𦋞𦋠𦋡𦋣𦋯𦋰𦋲𦋳𦋴𦋽𦋾𦋿𦌀𦌁𦌂𦌃𦌅𦌊𦌒𦌔𦌕𦌖𦌚𦌟𦌠𦌡𦌢𦌦𦌪𦌫𦌬𦌭𦌮𦌵𦌶𦌷𦌸𦌻𦌾𦌿𦍁𦍆𦍇𦍈𢍧𦋹𩼄𦢺尔你妳您沵猕珎祢称袮趂迩鉨㟜䂧𡝠𡢜𡫷𣓔𤦀𤫋𤫞𤶤𥅘𥇎𥬞𥭫𦍴𦰴𧉰𧢖𧤆𨋎𨧮𨨮𨰦𩲪𩶗𩸹𩿥贊儹劗囋巑攒攢欑灒瓒瓚礸禶穳籫纘缵臢襸讚趱趲躜躦酇鑽饡㜺㦫䂎䡽䰖𢑊𣀶𤿀𥽷𦫅𧄽𨳄𩎈𪚇票僄剽勡嘌墂嫖幗彯徱慓摽旚標檦漂熛瓢瘭瞟磦篻縹缥翲膘蔈薸螵褾謤醥鏢镖顠飃飄飘驃骠魒鰾鳔㟽㠒㬓㵱㼼䅺䏇䕯䧣䴩𠎼𠐆𠖟𠨌𡣋𡬽𢅚𢐕𢶏𢷋𢿏𣄔𣱪𣱯𣿖𤡑𤾛𥋠𦆝𧝼𧢄𧽤𨄏𨝓𨭚𩦠𩦾𩪊𩮳𩯧𪅃𪏫叞尉嶎慰熨犚罻蔚藯螱褽霨䲁𠝑𢲴𣂊𤛌𦵥𧐇𧕈𧛽𨄯𩻍尞僚嘹嫽寮屪嶚嶛憭撩暸橑潦燎爒獠璙療瞭竂簝繚缭膫蟟蹽轑遼鐐镣镽飉鷯鹩㙩䕩䜍䝤䨅䩍𢄷𢿞𣟆𣩢𤢸𥕴𥛰𦌒𦪕𧀪𧂏𧝜𧰉𧽽𨝷𨣀𩕐𩙂𩟩𩪚𩯊𩴤𩻻侣匔営巆捛梠櫚櫿瀯熍營稆竆筥絽莒营躳郘鋁閭麿㛎㴦㹚㾔㿘䃔䕡䥨𠃳𠹒𢈚𢙲𢞏𢣻𢥏𢰈𢻋𢾮𣪯𤁵𤔑𤹜𥗞𥶆𦊼𦛗𦞨𦵡𧅓𧎡𧕍𨜳𩘎𤕈𤕍𠧎僶憴澠竈鼇䵷𣤶𥀨𥀩𨭘𪔁龞䶯䶰䶱𩙠𪚬𪚭𪚮𪚯𪚰𪚱𪚳𪚵𪚶𪚸𪚹𪚻𪚼𪚽𪛀𪛁𪛂𪛈𪛕𪛖𢥱𤓗𧅝𧖤𧟔𨤇𨤈䢈䭝䯤䵳䶐𠑱𡑭𡼾𢶒𣋘𣍐𣫪𥢶𦔦𧴚𨗥𨞡𨭗𩆁䲋𠟆𢡚𦅦𦏋𨅕𩁀𩞲𪍲𪖽㦔㩎㱘𡽣𢅠𣎩𣚕𣝓𤳪𥀬𥌅𥣘𧗖𧞣𨽀𩉂𩉇𩼴𪒞㜖㡟㯾㷮䄚䏆䐬䜊𡮦𢲵𣉿𣍖𣩒𤡐𥀛𥲍𦋿𦿩𧕐𩘳𩞄䅲𡺸𣯆𣹡𥉙𦓂𦔌𦞯𧡺𧪡𨢍𨪌𩥂𩥞𡅿𡤲𣡣𤅦𤓠𥍗𥜸𥸖𥾁𧅸𧖋𨟬𨤌𨰳𩧤𩽶𡘍𡱌𡷆𪻘𠋧𥅨𥥣𠷐𡺟𤟿𥹚𦍼𬝖𦵕䚙𣕲𧱂𧻚𨕹𣉖𣘇𤌓𦋠𩎨𩒢𧡢𧤎䱎𩀈𪊥𩋢𩏆𩘒𩤡䳦𪃗𩫧𩍻𡩦𡪏堩揯緪㮓䱭𡩃𢫮𢰨𣈶𣎄𥔂𦚹𧙸𫰟𬣄𬮑𠣰𠾏𡄢𡣈𡦡𡪄𡺐𡼞𢄳𢅔𢉜𢋂𢐼𢑳𢔪𢝬𢥃𢷷𢾀𣃈𣃑𣋐𣦈𣦡𤏸𤑨𤣘𤯈𤺈𤻃𥀁𥖛𥗁𥳉𥵟𦅁𦅷𦇃𦋧𦑥𦓍𦘠𦠏𦡄𦺥𦿀𧄔𧤺𧬅𧳯𧷿𨅓𨟞𨣍𨮿𨲘𨶶𨷄𨼑𩋵𩜼𩤜𩫭𩱰𩴀𩴟𩼁𪃙𪋏𪋑𪋰𪹶㐯㗍䅨䦭䫝䭯䭰䭱䭲䭳𠝲𢢹𤋭𤧘𤼍𥔡𥗶𧮠𧽂𩠻𩠽𩠾𩠿𩡀𩡃𩡄𩡅𩡈𩡊𩡌𩡎𩡐𩡑𩡒𩡓𩡔𩡕𩡘𩡚𩡝𩡠𩡡𩡢𩡤𩡥𩤹㛥㧺㭼㹺䂿䈋䍝䎓䓠䵬䶁𠄄𠉤𠴲𡌩𢃕𣥾𤿽𦑇𦧟𦧥𧌏𨌭𨓬𨡍𩎽𩣯𩭣𪂌㞓㞛㮷㴯㸟䭫䭬𠩊𣿉𥡞𥿻𦓀𦦃𦮂𧊙𨌁𩊝𩠜𩬺𪗷㫀䅛䗉䮖𢃑𣉑𣋎𣮑𥛼𥜩𥫅𨍆𪂇𪉨𪛋𣸄𡪴𢳔𣩐𤛝𥀝𧃴𧐴𨟨𨢲𨣡𩐼𩘰𫫠㿢䳟𡦀𡪙𢡗𢡰𢢤𣇴𣇵𣊧𣋐𤀄𥎒𦁠𧖽𧡜𨞚𨵛𩣶𪂡𫀹㶘𡼒𢅀𢕯𤁡𤂹𤑶𥢏𥨎𦗡𧝓𧰘𧽼𨝸𩀽𩡝𪍵𡡖𣩳𥎑𥸢𧖛𧝆𨅔𨼐𩀿𩅨𩻛𪅽𪖼㓭㔠㡫㬞㵣㵧㷎㹇䅥䈓䋵䔽䔾䕣䗶䥟䦪䨠䫘𠂄𠥜𠾩𠿒𡇼𡽙𢆜𢇋𢉥𢎔𢢖𢢚𢶆𢷒𣂰𣎅𣨵𣰌𣿌𤢔𤩲𤸎𤺐𥀥𥈎𥢸𥴭𥻉𦅶𦝲𦤦𦩥𦪬𦼰𦼵𦿋𧇷𧝶𧝽𧼨𨆍𨉪𨞛𨭛𨲲𩍛𩦏𩦞𩩲𩮂𩯝𩹄𪆰𪑦𪓮𪕭𪘹𪙰喝褐謁䅧䜾䤃䪦䪧䪨䪩䪪䪫䪬䪭䪮䪯䪰䬓𠗥𠮒𠽪𠿌𡅙𡑠𡪟𢉩𢋆𢴠𢾑𣤗𣤣𣽚𤃷𤋾𤟟𤪅𦋫𦺼𦺿𧄕𧗹𧝊𧫙𧬣𧮍𧯹𨍑𨙣𩇄𩈴𩐘𩐙𩐛𩐜𩐞𩐡𩐣𩐤𩐥𩐦𩐨𩐫𩐭𩐮𩐰𩐱𩐲𩐴𩐵𩐶𩐷𩐸𩐹𩐺𩐻𩐼𩐾𩑁𩑂𩑃𩑇𩑈𩑉𩑊𩪢𩪣𩯈𩹎𪔧𪛏響䖁䗷𩁈𫔪𩺿䔔𥸜𧫙㫯㘛䆍䌬䡁䪊䮾𠑙𡃡𡾩𢤱𢤲𤮨𤼃𥸉𦌼𦒮𦪽𦪿𧟟𧮩𨇘𨏠𨳁𨳅𩙘𩟭𩰀𪈗𪎁𪐖𪔷𪚑𪚒𪚓𪚗𪚘𪚝𪚟𥸊𦗐𧅙𧱘𧱳𤹟𧛨𧜟𨝗𩝾𩱐𪄲㒀㰅㹍䁤䊞䎮䐱䙗䮰䵂𠢗𡂓𡒱𢤊𢸈𣂉𣯵𤁷𤑦𤠻𤢼𤹞𥕐𥖾𥛚𥡦𥧮𦗑𧃐𧏸𧽦𨮹𩍷𩝿𪄱𪐏𡙶𧯇𨻫𪱨𣬙㥬㿶䄘䅭䒍䠙䧛䨦䩷𠗵𡽲𢄎𢐊𣂆𣯊𣯟𤧭𥻭𦗍𦾭𧤞𨍩𨏰𨢐𩡕𠘅𤢌𥼝𦔟𦡬𪒭㛳㡣䫕䱱𠽜𡄶𡡿𡦔𢅛𢴨𣚌𣾪𤚢𤟾𤾤𦔝𧀰𧂨𧍝𧝐𧤍𧬍𨅙𨗁𨬙𩋣𩤢𩪙𪆡𪍼𪕬𪖰㜪䞋𡩁𥗒𥨾𧃫𧅜𧭼𨑁𫚀㔎㔑㖖㛙㜸㠔㦚㱰㱸㲔㵨㵷㸉㸤㾕䁹䅸䉸䏁䐻䔂䛨䢃䢄䮨𠒱𠞂𠪮𠮃𠽿𡁂𡁈𡅼𡎰𡟭𡤏𡦣𡺰𡽁𡽕𡾦𡾲𢐦𢓫𢔭𢕾𢡇𢣑𢩞𢶓𢹐𣃎𣖸𣘘𣘲𣙼𣦢𣩩𣪮𣫖𣫚𣸒𣹲𣿒𤀫𤀲𤌊𤏻𤏽𤐮𤒞𤗺𤙡𤢣𤨘𤴣𤻁𥃌𥌊𥏔𥔈𥗲𥢍𥣦𥴬𥶜𥷁𥻮𥼺𦀓𦃘𦆣𦌠𦍁𦐹𦘄𦞤𦠋𦠬𦡜𦸯𦽆𦽵𧀕𧀼𧃎𧄘𧆈𧎨𧒣𧕏𧗶𧛺𧤱𧪹𧬕𧭋𧱏𧲉𧲜𧾑𨁅𨃛𨆳𨇨𨌍𨐍𨐏𨐑𨐕𨐖𨐘𨐛𨐜𨐝𨐞𨐟𨐠𨐡𨐢𨐣𨐥𨐦𨐨𨐩𨐯𨐰𨐱𨐳𨐴𨐵𨐶𨐹𨐼𨐾𨑀𨑂𨫽𨬟𩁊𩕺𩝪𩪧𩷔𩺵𩼎𪇊𪇷𪎃𪮷𪿢㢺䈉𠙤𡁕𡞘𣮍𤗈𤮌𥇒𥪵𥵳𦁉𦽚𧌃𧚪𧩕𧱙𧳛𪑗𥫐㚊䀭䠹䤤䬵𠛳𡀲𡭹𡱍𡲼𢻉𢼵𤸺𥩲𦈲𦐤𦷷𧊏𨀖𨒨𩐰𩠚𩰶郞閬㓪㝗㟍㢃㫰㱢㾗䀶䆡䍚䕞䡙䯖𠻡𢕦𢳑𢽂𣂞𣻡𤗀𤭒𥍫𥶞𦫍𦵧𦺫𦿉𧚅𧻴𩗖𩛡𩷕𪁜廊朗㾿䱶𤠸𨉰𩝢𠽣𡍪𢔣𢩖𢻗𤊿𥀈𥈊𥓾𥪵𥯥𦂉𦑣𦑪𦝥𦦈𦦕𦦘𧶵𧼰𨂵𨇧𨔨𩃹𩝟𪘾㮇𥪌𢞋𩷵𠷕𣽝𥢓𥷜𧍯𨅏𨐦𨺢𩖙𩖚𩖛𩖜𩖝𩖠𩖡𩖢𩖣𩖤𩖥𩖦𩖨𩖩𩖬𩖭𩖮𩖯𩖰𩖲𩖳𩖴𩖵𩖶𩖷𩖸𩖹𩖺𩖼𩖽𩖾𩖿𩗁𩗄𩗅𩗆𩗇𩗈𩗉𩗊𩗋𩗎𩗏𩗐𩗓𩗔𩗕𩗖𩗘𩗙𩗚𩗛𩗝𩗞𩗠𩗢𩗣𩗤𩗥𩗧𩗨𩗩𩗪𩗫𩗬𩗭𩗮𩗯𩗰𩗱𩗲𩗳𩗴𩗵𩗶𩗷𩗸𩗼𩗽𩗾𩗿𩘁𩘃𩘅𩘆𩘇𩘈𩘉𩘊𩘋𩘌𩘍𩘎𩘏𩘐𩘑𩘒𩘓𩘕𩘖𩘗𩘘𩘙𩘚𩘜𩘝𩘞𩘟𩘠𩘡𩘥𩘦𩘧𩘭𩘮𩘯𩘰𩘱𩘲𩘳𩘵𩘷𩘸𩘹𩘺𩘻𩘼𩘽𩘾𩘿𩙁𩙂𩙃𩙄𩙅𩙆𩙇𩙈𩙊𩙎𩙏𩙐𩙑𩙒𩙓𩙔𩙖𩙘𩙙𩙚𩙛𩙜𩙝𩙞𩙠𩙡𩙢𩙣𩙤𩹥𪋖𪕴𫗆𫙹𬬣𬱴𡞟𡯘𨩵𡜟𤇲𦚮𦣨𧙨𨉃𨿂𨿃𪀼𩄸𡔞𢇦𢗖𡔟𡔨𫊟𧠒𦜙𤏼䏦䑙䑚䑛䑜𡇜𢠾𥵶𥶕𦧈𦧉𦧊𦧋𦧎𦧏𦧐𦧒𦧓𦧕𦧖𦧘𦧙𦧚𦧛𦧝𦧟𦧢𦧤𦧥𦧧𦧩𦧪𦧫𦧭𦧮𦧰𦧱𦧴𦧹𦧼𦳇𧮥𪌩𪎾𪙬𪙶𨜮𨜊𠎱𢑋𩱠𡰡𢥘𤣑𤮰𤼒𥍋𦢿𧟃𧢧𧲚𨏳𩽨𪈥𪋸媸滍㺈䧝𡴍𡴒𢾫𣣷𥉍𦞲𧘫𧪴𢹘犕糒㣁㷶㸢𢞎𣖾𤏛𤖐𠪹𣞑䯵𢍃𢞨𢡘𣮡𣽑𦯨𨁼𨐟𩣺𩿜𪑖㱵䴅䥀𠋷𢱟𩝚𤚍桺駵䱖𠋿𠓴𠞐𡋲𡘣𡟽𢥍𢲖𣨇𤄉𤥗𤮷𥁶𥥹𥷢𦊿𦕼𦯄𧶝𨌡𨦰𩮢𪕚𢊱𢴢𢿠𣯻𤖘𤗸𥢊𥳡𧴍𩀴𥌶𥽿𠔒𠲼𤡡𤦥𥌶𥧹𥨗𦒟𦽭㓖㪤𢳂𤹝𧏻缡㰚㷰䄜䅻䍦䙰䬜𠌯𪱩㥥㬂㷒㒖䊪𦂕𡽇𦽳𨭬𡿋䴁䘍𫛙㙑㝢𥝀䄔𤘐䨞龋𢖎𢳍𣘝𣻝𥱺𦸊𨝍𪄷𠙞𥾀𧍔𧷋𩀄𢉬𧛑𧝪𧞙𧟯𪃋𥋣㷡䋌䝣䢹䣰𢆢𤦲𥑭䐰䗛𠌪𡟞𡤥𡩢𢞣𥠿𦤜𦺰𤤸𥬲𦀉𨹄𩊜𩎫𠖊𠚹𠣿𠥚𠥝𠨻𠩻𠪘𠫌𠲴𠶳𠷑𠹢𠿉𠿊𠿍𡁒𡂑𡃫𡄇𡄈𡄒𡄔𡄵𡇀𡍰𡎷𡒂𡒼𡓊𡚾𡢕𡢖𡤖𡧔𡷠𢄌𢅝𢊘𢋁𢑿𢗎𢞒𢟝𢠺𢢞𢢢𢯫𢯸𢶙𣉜𣍆𣒃𣓒𣖫𣝝𣤢𣪂𣪃𣪄𣪅𣪆𣪇𣪉𣪊𣪋𣪌𣪍𣪏𣪐𣪖𣪗𣪙𣪚𣪛𣪠𣪡𣪣𣪩𣪪𣪭𣪮𣪯𣪰𣪲𣪳𣪴𣪶𣪷𣪸𣪹𣪼𣪽𣪾𣫀𣫁𣫉𣫊𣫌𣫐𣫒𣫓𣫖𣫘𣫙𣫚𣫜𣫝𣫞𣫟𣫡𣫣𣫤𣫥𣫦𣫧𣫨𣫩𣫪𣫫𣸍𣹬𣺲𣻑𣾮𤈧𤍁𤖬𤚲𤚼𤛖𤛗𤝈𤠍𤡘𤥞𤧧𤩮𤩯𤩱𤩴𤪢𤮈𤮛𤶣𤹥𤻷𤼺𥀎𥃟𥆛𥈼𥉟𥊧𥍟𥔳𥖳𥝻𥦆𥰺𥲏𥳊𥳨𥳴𥴫𥵓𥵠𥶵𥷆𥷝𥷽𥸂𥸃𥸋𥺵𥻦𥼆𥼹𥽂𥽦𥽿𦃏𦋲𦎯𦎼𦒇𦒫𦤂𦦹𦪑𦪹𦳠𦴎𦺔𦼷𦽄𦽐𦽛𦽮𦾫𦿓𧂔𧂣𧄘𧈌𧈑𧈖𧈗𧈻𧏌𧏚𧏫𧐜𧒼𧓙𧘣𧜁𧜤𧝷𧞒𧞹𧞺𧢂𧤔𧤧𧫦𧫫𧬋𧮒𧮙𧯸𧰵𧱕𧲇𧷥𧹲𧹷𧺢𨂩𨃞𨃟𨍪𨖏𨗋𨙀𨡩𨢋𨦯𨨻𨩷𨱚𨵐𨶞𨷕𨸜𨺣𨿒𩀠𩁡𩂹𩋐𩋦𩌊𩍤𩏇𩏻𩤣𩥯𩪔𩪡𩮫𩮵𩯌𩳇𩴇𩵤𩷍𩸿𩹨𪁛𪄀𪄅𪆪𪇂𪇗𪉘𪌓𪍠𪍥𪎇𪏙𪐕𪐮𪒀𪒋𪒮𪔰𪕂𪕷𪕸𪖃𪖆𪛒𪝒𪡹𪼪𫖋𫞌𫟁𫨻𬆍𬆲㐗㧯䇭䎜𡪰𡶰𤶁𥥧𥨔𦒲𦒺𦒾𦓀𦓂𦓄𦓈𦓋𨈺𨊁𨘝𨚻𨠬𨴛𩅯𩇇𩥞𩺆𫦶㜈𡺱𣖶𩥎㡬㼩䫆𡓖𤻯𥓉𩫨𣡥𥎥𣚉𣼢𦦹𣫩㒨𨇫𠟼𪺲𣃠𣃢𣄧梟頲𡳴𤰑𩡑𩡥𣊦𨑁𨐞𩖜𪥣𦃁𢟿𦧖𡗓𠪋𠩰厚𠷋𡎋𣖔𣠹

## 2017/07/07

字型主製作人改由李爾樅擔任，內木一郎、陳輝恒任聯合製作人。

## 2017/06/26

修改或重修以下字元：
戏県懸縣𣌘𤂸𤑴𤜃𤮩𥌲𥤁𥫉𥲮𥴀𦎧𦏧𦤘𦴒𧔫𧭺𨣶𨯢𨰩𨰮𨰯𪈷䯬𡓣𡾘𨟍𩫠𩫧𩫨𩫩𩫫𩫭𩫯𩫰𩫱𪈃𣠐𤅝𤅻𩇑𩫮𢌓𩫖𩫃𩇊𡰗𡰜𡰔𠅖𠅠𠅷𠆆𡕨𣹾𤒆𤚮𧭫𨣳𨪟𩁛𪆾𪈋𦞶𦓠

## 2017/06/24

修改或重修以下字元：
𠣥𡻑𢁁𢒔𢧈𢽚𣂡𣹞𥳤𧞮𧰵𧼙𨁿𨧧𩳥𪳓

## 2017/06/23

修改或重修以下字元：
豖冢剢啄塚椓涿琢瘃硺諑诼㙇㞘㧻䐁䦠

## 2017/06/19

新增以下字元：
𫠠𫡑𬺰𭁟𭕄

## 2017/06/17

修改或重修以下字元：
𠔁𠔀

## 2017/06/15

新增以下字元：
𠩵𥫗𫩏𫠣

## 2017/06/12

修改或重修以下字元：
丛东丝

## 2017/06/10

修改筆畫區域字元。

修改或重修以下字元：
𠃉

## 2017/06/06

修改或重修以下字元：
⽡

## 2017/06/05

修改或重修以下字元：
遠圜𡈤伐

## 2017/06/04

修改或重修以下字元：
華嘩墷嬅曄曅樺澕燁爗皣瞱譁鏵鞾韡驊鷨㒯㠏㦊䅿𡪤𦠜𦾏𧑍𧤻𨣄𨶱𩀵𩏧𪏥崋

## 2017/06/03

修改或重修以下字元：
垂倕厜唾埵娷崜捶棰涶甀睡硾箠綞缍腄菙諈郵錘锤陲㩾㻔䅜䍋䮔䳠𡙇𢏴𢛉𢻩𣇦𥡭𦈼𦖋𦥻𦸙𨙔𨲉𨿠𩃒𩗰𩜀𩣷𩩞𩭦𩸫

## 2017/06/02

修改或重修以下字元：
主住妵宔嵀拄柱鉒麈䇠樦殶注炷疰砫紸罜蘣蛀註跓軴霔飳駐驻黈㗟㹥䝬䪒乼

## 2017/05/31

修改或重修以下字元：
民冺刡呡囻姄岷怋惽愍抿敃敯昬暋氓泯湣珉瑉眠睯笢緡缗罠苠蟁鈱鍲鴖𫞖

## 2017/05/28

修改或重修以下字元：
糞瀵䆏𡓴𢹔

## 2017/05/27

修改或重修以下字元：
異兾冀廙懻戴潩瀷瀻熼禩穓翼襶趩霬驥骥龭㔴㢞䆊䔬

## 2017/05/24

修改或重修以下字元：
𠎧𡿖𢍆𣸲𦚨𪃈

## 2017/05/23

修改或重修以下字元：
㓞偰喫噄囓契恝挈揳栔楔洯潔猰瘈瘛碶禊稧窫絜緳葜蛪褉觢鍥锲齧㓗㓶㗉㛃㝣㮮㸷㼤䂮䐼䚉䛚䝟䤿䥛䦬䫔䱮

## 2017/05/22

修改或重修以下字元：
丯砉剨湱騞𢝇𤊴

## 2017/05/21

修改或重修以下字元：
憲幰攇櫶瀗藼㦥䘆䜢䧮𢖘𤼂𧾨𨏥𩍹

## 2017/05/20

修改或重修以下字元：
害割嗐搳犗瞎磍縖螛豁轄辖鎋鶷㝬㪡㮫㲅𠟽𠢆𡁁𡟲𡫴𡮞𢞐𢞩𢻜𣣶𥎆𥰶𦎱𦢽𦤬𦧮𦵯𦺧𧜅𧯆𩏓𩝛𩡔𩥌𩪃𩮝𪇜𪙏

## 2017/05/15

修改或重修以下字元：
永咏怺昶昹栐樣泳漾眿羕脉詠霡㨾㫤䘑䳮𠍵𡡂𢟣𢫕𤡀𤤯𦨤𦨬𦨺𧫛𨖌𨠕𩈗𩊍𩞭𩥔𬠘

## 2017/05/10

修改或重修以下字元：
亟極殛

## 2017/05/09

修改或重修以下字元：
残浅践𥁫戋

## 2017/05/08

修改或重修以下字元：
栈溅盏笺线贱钱饯

## 2017/05/01

修改或重修以下字元：
㣅㻸㿊䁮䃡䅾䍼䐶䣟䤐䫬

## 2017/04/27

修改或重修以下字元：
蔑懱櫗瀎礣蠛衊襪鑖韈韤鱴㒝㩢䁾䌩䩏䯦𪇴

## 2017/04/23

修改或重修以下字元：
咲讯伦抡沦纶论轮给创

## 2017/04/19

修改或重修以下字元：
缻

## 2017/04/16

修改或重修以下字元：
㠯

## 2017/04/14

新增以下字元：
𤱁

修改或重修以下字元：
𠃏门戕𠚣乑㐺朼𣏂杀

## 2017/04/13

新增以下字元：
丆丷乛亇龰龵龶龷龸龺龻立卵𧘇𠀆𠀎𠃊𠃌𠃍𠃎𠄐𠀎𠁣𠃛𠃜𡲢𥲃𦣞𨳈𪚴𪜊𫡏𬟏

## 2016/11/18

公開發佈「I.明體異體」字型檔：I.MingVar-5.00.otf，版本資訊爲Version 5.00。

## 2016/11/16

依據回饋，修改或重修以下字元：
𨣕𤖫𦐧

## 2016/11/08

內木一郎釋出測試版「I.明體異體」字型檔：I.MingVar-4.91.otf，版本資訊爲Version 4.91。檔案只給予協助者，以提供回饋。基本上主要處理CJK一般區域及Ext-A區域字元的字形修改。Ext-B及之後的區域，除獨用部件和個別較多見的用字元，或《傳承字形部件檢校表》中提及的例子外，目前暫不處理。

## 2016/11/06

修改或重修以下字元，使之與「I.Ming」一致：
蔑篾幾奧㤜㳚𠲌𣆒𤞉𥝨

修改或重修以下字元：
⼜⺌⺀馋搀谗⺬礻⺈⺍⺉⺼𠎶膥𣚺

## 2016/11/05

修改或重修以下字元，使之與「I.Ming」一致：
饣⻠饥饧饨饩饪饫饬饭饮饯饰饱饲饴饵饶饷饺饼饽饿馀馁馄馅馆馇馈馊馋馍馏馐馑馒馓馔馕鸠鸡。

## 2016/11/04

修改或重修以下字元，使之與「I.Ming」一致：
页⻚顶顷顸项顺须顼顽顾顿颀颁颂颃预颅领颇颈颉颊颌颍颏颐频颓颔颖颗题颚颛颜额颞颟颠颡颢颤颥颦颧。

## 2016/11/03

修改或重修以下字元，使之與「I.Ming」一致：
贲贳贴贵贶贷贸费贺贻贼贽贾贿赀赁赂赃资赅赆赇赈赉赊赋赌赍赎赏赐赓赔赕赖赘赙赚赛赜赝赞赠赡赢赣。

## 2016/11/02

修改或重修以下字元，使之與「I.Ming」一致：
㭸卫赵𡦱见⻅观规觅视觇览觉觊觋觌觎觏觐觑贝⻉贞负贡财责贤败账货质贩贪贫贬购贮贯贰贱。

## 2016/11/01

修改或重修以下字元：
奐喚寏愌換渙煥瑍瘓㪱㬇感憾撼鱤旃栴㮵曰白百㐁佰巷港闀𩰓⼔⼋⼹⽱⽿⾿⿌⻱⿔匕彐习禸黽龜鬯鬱鬰𩰪画⻟㣺⺗𠂞嘧。

修改或重修以下字元，使之與「I.Ming」一致：
𠀒𠀩𤙀𦭃𧆪嵧廇磂籕蒥䗜䝀䶉𢕍𢞓𢞭𢣠𣠚𥀓𥏵𥛅𥠷𥰣𥳩𦃓𦉉𦞧𧤝𧽖𨍸𩥖籀鶹㿪䏘𫘇𣬮㢶𢐈𢐤𠆢䴟。

## 2016/10/31

修改或重修以下字元：
傥儅償儻党劏嘗嘡噹嚐堂壋嫦常幥憆戃掌摚撐撑擋攩曭棠樘橕橖檔欓漟澢灙爣牚瑺璫瓽甞當瞠矘礃礑簹糛罉膛艡螳蟐蟷裳襠譡讜賞贘蹚鎲鏛鏜鏿鐣鐺鑜钂闛闣隚鞺饄饓鱨黨鼞。

## 2016/10/30

修改或重修以下字元：
匃偈喝噶堨嵑嶱幆愒揭擖暍曷朅楬歇毼渴猲獦碣礍竭羯臈葛藒藹蝎蠍褐謁譪輵轕遏鍻靄鞨餲馤騔鶡齃。

## 2016/10/28

修改或重修以下字元：
聴廰戢嶯擑檝濈艥蕺霵𠿠𡅺𤖞𥊬𥖙𦠾𧥄𨎵𩆭𩦤耳耷耸聟聱聲聳聻聾咠揖楫箿緝葺諿輯鍓穴坹岤柼泬狖袕貁鴥鴪䴳毒毐毋毌。

## 2016/10/27

修改或重修以下字元：
値值嗭埴徝悳惪憄植殖淔犆矗禃稙置㥀㨁㯰䐈真傎厧嗔填嫃寘嵮巔慎搷槙滇瑱瘨癲瞋磌禛稹窴縝蒖衠謓蹎鎮闐顛鬒鷏黰齻眞塡巓愼槇鎭顚。

## 2016/10/26

修改或重修以下字元：
俞偷喻媮榆兪偸匬喩堬婾崳愈愉揄楡歈毹毺渝牏瑜瘉癒睮窬羭腧萮蕍蝓褕覦諭貐踰輸逾鄃鍮隃㡏㢏㺄㼶。

## 2016/10/25

修改或重修以下字元：
又叉义乂文吝忞忟悋抆斈斉斊斋斐斖交佼咬嗲姣峧恔挍斧晈校洨滏烄父爷爸爹爺狡珓皎礮絞胶蛟詨賋跤較釜鉸餃駮骹鮫齩爻笅訤駁丈仗扙杖。

## 2016/10/24

修改或重修以下字元：
受授涭綬绶辤閿阌㖟㥅䛵𠃶𠢛𢔏𤟗𦧦𦰹𧌅𧚯𧡓𨛶愛僾噯嬡懓曖燰璦皧瞹薆鑀靉鱫舜僢橓瞬蕣䑟䢬䴄𤯷𦨁𬧓。

## 2016/10/23

修改或重修以下字元：
甚偡勘卙啿堪墈夦媅尠嵁愖戡揕斟椹歁湛煁瘎碪磡糂葚蘛諶踸鍖霮黮。

## 2016/10/22

修改或重修以下字元：
益嗌塧搤榏溢獈縊膉艗螠蠲謚貖賹鎰隘鷁齸㜋㬲㱲䅬䚊。

## 2016/10/21

修改或重修以下字元：
朝嘲廟潮謿𡼼𢴿𦺓〩ㄆㄟㄠㄩㄭㆯㆴㆵㆶ㇀㇁㇂㇃㇄㇅㇆㇇㇈㇉㇊㇋㇌㇍㇎㇏㇐㇑㇒㇓㇔㇕㇖㇗㇘㇙㇚㇛㇜㇝㇞㇟㇠㇡㇢㇣。

## 2016/10/20

內木一郎從「I.Ming」分化出「I.MingVar」，稱呼爲「I.明體異體」（一點明體·異體），字型檔更名作：I.MingVar.ttf，版本資訊爲Version 4.90。

本字型過往的沿革請參看I.MingVar.txt，由今日起的沿革請參看本文件。

修改或重修以下字元：
𡬠皀㿝县叀医兓朁僭潛簪蠶譖鐕䭙嶜憯撍橬熸噆糣㔆鬵灊㕣㔯㫟䛇㕣柗沿船鉛袞滾蔉㙥㨰䙛䜇𠞬𡻨𢟦𧸫𨎊磙㫃𣃘卩𧰨𠯑桰銽㚔𣍝⻎齔丮𠃨卄⺶夨戠丯。
